--- a/src/navbar.html
+++ b/src/navbar.html
@@ -1,7 +1,7 @@
 <!-- navbar.html -->
 <nav class="bg-white/30 backdrop-blur-sm border-gray-200 dark:bg-gray-900/30">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <a href="https://finite-code.github.io/256bit-tech/src/index.html#" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img class="rounded-full w-12 h-12" src="https://github.com/Finite-Code/256bit-tech/blob/main/src/img/profiles/atharva/profile.jpg?raw=true" class="h-8" alt="Flowbite Logo" />
             <span class="self-center text-2xl font-semibold whitespace-nowrap text-gray-900 dark:text-gray-300"><i>256bit Tech</i></span>
         </a>
