--- a/src/navbar.html
+++ b/src/navbar.html
@@ -1,7 +1,7 @@
 <!-- navbar.html -->
 <nav class="bg-white/30 backdrop-blur-sm border-gray-200 dark:bg-gray-900/30">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="https://finite-code.github.io/256bit-tech/src/index.html#" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <a href="./index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img class="rounded-full w-12 h-12" src="https://github.com/Finite-Code/256bit-tech/blob/main/src/img/profiles/atharva/profile.jpg?raw=true" class="h-8" alt="Flowbite Logo" />
             <span class="self-center text-2xl font-semibold whitespace-nowrap text-gray-900 dark:text-gray-300"><i>256bit Tech</i></span>
         </a>
@@ -17,7 +17,7 @@
         <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
             <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-white/30 backdrop-blur-sm md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700">
                 <li>
-                    <a href="https://finite-code.github.io/256bit-tech/" class="block py-2 px-3 md:p-0 text-gray-800 dark:text-gray-300 hover:text-blue-700 dark:hover:text-blue-500" aria-current="page">Home</a>
+                    <a href="./index.html" class="block py-2 px-3 md:p-0 text-gray-800 dark:text-gray-300 hover:text-blue-700 dark:hover:text-blue-500" aria-current="page">Home</a>
                 </li>
                 <li>
                     <a href="#" class="block py-2 px-3 md:p-0 text-gray-950 dark:text-gray-300 hover:text-blue-700 dark:hover:text-blue-500">About</a>
